@@ -47,7 +47,7 @@ SWIG could be used to create a CloudI API for Lua, R, D, etc.
 
 ### Examples exist within the integration tests:
 
-#### ATS
+#### [ATS](https://cloudi.org/faq.html#6_ATS)
 
 * [`src/tests/count` Basic Count Test](https://github.com/CloudI/CloudI/blob/master/src/tests/count/ats/v2/main.dats)
 * [`src/tests/http_req` Basic HTTP Request Test](https://github.com/CloudI/CloudI/blob/master/src/tests/http_req/ats/v2/main.dats)
@@ -144,6 +144,14 @@ SWIG could be used to create a CloudI API for Lua, R, D, etc.
 * [`src/tests/msg_size` Basic Message Size (Forwarding) Test](https://github.com/CloudI/CloudI/blob/master/src/tests/msg_size/msg_size.rb)
 * [`src/tests/messaging` Basic Messaging Test](https://github.com/CloudI/CloudI/blob/master/src/tests/messaging/messaging.rb)
 * [`src/tests/null` Basic Null Response Test](https://github.com/CloudI/CloudI/blob/master/src/tests/null/null.rb)
+
+#### [Rust](https://cloudi.org/faq.html#6_Rust)
+
+* [`src/tests/count` Basic Count Test](https://github.com/CloudI/CloudI/blob/develop/src/tests/count/rust/main.rs)
+* [`src/tests/http_req` Basic HTTP Request Test](https://github.com/CloudI/CloudI/blob/develop/src/tests/http_req/rust/main.rs)
+* [`src/tests/msg_size` Basic Message Size (Forwarding) Test](https://github.com/CloudI/CloudI/blob/develop/src/tests/msg_size/rust/main.rs)
+* [`src/tests/messaging` Basic Messaging Test](https://github.com/CloudI/CloudI/blob/develop/src/tests/messaging/rust/main.rs)
+* [`src/tests/null` Basic Null Response Test](https://github.com/CloudI/CloudI/blob/develop/src/tests/null/rust/main.rs)
 
 Please see the [CloudI API documentation](https://cloudi.org/api.html#Service)
 for more details.
